--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "node-red-contrib-mjpgcamera",
   "version": "1.0.0",
-  "description": "Node Red nodes for mjpgstreamer",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Node-RED nodes for mjpg_streamer",
+  "author": "Florin Baroga",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/electronicplayground/node-red-contrib-mjpgcamera.git"
@@ -18,7 +15,7 @@
       "mjpgConsumer": "mjpgConsumer/mjpgConsumer.js"
     }
   },
-  "author": "Florin Baroga",
+
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/electronicplayground/node-red-contrib-mjpgcamera/issues"
