--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-mjpgcamera",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "Node-RED nodes for mjpg_streamer",
   "author": "Florin Baroga",
   "repository": {
@@ -15,16 +15,13 @@
       "mjpgConsumer": "mjpgConsumer/mjpgConsumer.js"
     }
   },
-
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/electronicplayground/node-red-contrib-mjpgcamera/issues"
   },
   "homepage": "https://github.com/electronicplayground/node-red-contrib-mjpgcamera#readme",
   "dependencies": {
-    "mjpeg-camera": "^1.7.2",
-    "mjpeg-consumer": "^1.1.0",
-    "request": "^2.81.0"
+    "mjpeg-camera": "^2.0.0",
+    "mjpeg-consumer": "^2.0.0"
   }
-
 }
